--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 asyncpg==0.30.0
 attrs==25.3.0
+bertopic==0.17.3
 blinker==1.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.2
@@ -10,32 +11,57 @@ click==8.3.1
 colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
+filelock==3.20.0
 Flask==3.1.2
 fonttools==4.60.1
 frozenlist==1.7.0
+fsspec==2025.10.0
 greenlet==3.2.3
+huggingface-hub==0.36.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.2
 kiwisolver==1.4.9
+llvmlite==0.45.1
 MarkupSafe==3.0.3
 matplotlib==3.10.7
+mpmath==1.3.0
 multidict==6.6.3
+narwhals==2.11.0
+networkx==3.5
+numba==0.62.1
 numpy==2.3.2
 packaging==25.0
 pandas==2.3.1
 pillow==12.0.0
+plotly==6.4.0
 propcache==0.3.2
 psycopg2-binary==2.9.10
+pynndescent==0.5.13
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0.3
+regex==2025.11.3
 requests==2.32.4
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.3
+seaborn==0.13.2
+sentence-transformers==5.1.2
+setuptools==80.9.0
 six==1.17.0
 SQLAlchemy==2.0.42
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.9.1
 tqdm==4.67.1
+transformers==4.57.1
 typing_extensions==4.14.1
 tzdata==2025.2
+umap-learn==0.5.9.post2
 urllib3==2.5.0
 Werkzeug==3.1.3
 yarl==1.20.1
